# gitstudy

./: .gitignore  CMakeLists.txt  README.md  chess.c  fmod_test.c  main.c  test.c  test.h  test1.txt
android-cmake/: .gitignore  CMakeLists.txt  Readme.md  build.bat  build.sh  clean.bat  connect.bat  foo-bar.txt
android-cmake/apps/android_log/: android_log.cpp
android-cmake/apps/gles_draw/: gles_draw.cpp
android-cmake/apps/hello_world/: hello_world.cpp
app/: CMakeLists.txt
app/app1/: CMakeLists.txt  app1.c  app1.h
app/app2/: CMakeLists.txt  app2.h
app/app3/: CMakeLists.txt  app3.c  app3.h
c learn/: .gitignore  CMakeLists.txt  build.bat  notes.txt
c learn/include/: student.h
c learn/scripts/: build.bat  settings.cmake
c learn/src/c_merge/: main.cpp
c learn/src/chess/: chess.c  guessNumber.c  main.c  student.c  swap.c
c learn/src/find_string_index/: main.c  oled_font.c  oled_font.h
c learn/src/firework/: particle.cpp  particle.h  particle_emitter.cpp  particle_emitter.h  renderer.cpp  renderer.h  shader.cpp  shader.h  test.cpp
c learn/src/firework/shader/: solid.frag  solid.vert  sprite.frag
c learn/src/func_pointer/: fun_pointer.c  func_pointer.h
c learn/src/get_encode_bytes/: main.c
c learn/src/guessNumber/: guessNumber.c
c learn/src/heap/: my_heap.c  my_heap.h  top-k.c
c learn/src/linked_list/: main.c  my_linked_list.c  my_linked_list.h
c learn/src/linker/: gcc_default.ld  linker.c  readme.txt  test.ld
c learn/src/midi_player/: main.cpp  main.h  midi_extract.cpp  midi_extract.h  midi_play.cpp  midi_play.h  scroll.txt  serial_utils.cpp  serial_utils.h  user_views.cpp  user_views.h  views.cpp  views.h
c learn/src/midi_player/midi_file/: VVIBJFRIWEW.mid
c learn/src/open_file_and_folder/: main.cpp
c learn/src/page/: main.c
c learn/src/sort/: main.c  my_sort.c  my_sort.h
c learn/src/studentSystem/: main.c  student.c  student.data  student.h
c learn/src/swap/: main.c  swap.c  swap.h
c learn/src/test/: main.c  test.c  test.h
c learn/src/vector/: main.c  my_vector.h
c learn/src/worktime/: pagecode_def.h  worktime.c
c learn/test/: test.c
ffmpeg/: CMakeLists.txt  build.bat
ffmpeg/include/: resource_manager.h  safe_quene.h  scoped_avpacket.h  shader.h  sound_manager.h  sync_clock.h  texture.h  video_player.h
ffmpeg/include/ffmpeg/libavutil/: getenv_utf8.h
ffmpeg/include/glad/: glad.h
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/include/utils/: util.h
ffmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
ffmpeg/res/shader/: video.frag
ffmpeg/scripts/: clean.bat  settings.cmake
ffmpeg/shader/: nv12.frag  video.vert  yuv420.frag  yuv420.vert
ffmpeg/src/: main.cpp  resource_manager.cpp
ffmpeg/src/ffplay/: ReadMe.md  cmdutils.c  cmdutils.h  ffplay.c  ffplay.km  ffplay_renderer.c
ffmpeg/src/glad/: glad.c
ffmpeg/src/media_player/: main.cpp  resource_manager.cpp  sound_manager.cpp  test.cpp  texture.cpp  video_player.cpp
ffmpeg/src/utils/: util.c
fmod_api/core/: .gitignore  CMakeLists.txt
fmod_api/core/examples/: 3d.cpp  asyncio.cpp  common_platform.cpp
fmod_api/core/scripts/: settings.cmake
game/: CMakeLists.txt  build.bat
game/include/tools/glad/: glad.h
game/include/user/: PowerUp.h  ball_object.h  button.h  game.h  game_level.h  game_object.h  lives.h  menu.h  menu_button.h  particle_generator.h  post_processor.h  shader.h  sound_manager.h  sprite_render.h  textRender.h  texture.h
game/res/icon/: version.rc.in
game/res/shader/: particle.frag  particle.vert  post.frag  post.vert  sprite.frag  sprite.vert  text.frag  text.vert
game/scripts/: settings.cmake
game/src/user/: ball_object.cpp  button.cpp  game.cpp  game_level.cpp  game_object.cpp  lives.cpp  main.cpp  menu.cpp  particle_generator.cpp  post_processor.cpp  shader.cpp  sound_manager.cpp  sprite_render.cpp  textRender.cpp  texture.cpp
glLearn/: CMakeLists.txt  build.bat  build.sh  imgui.ini  libglad.lib  main.cpp  test.cpp  test.h  version.rc.in
glLearn/assert/res/shader/: light.fs  model.fs  model.vs
glLearn/include/: camera.h  fonts.h  frameBuffer.h  game.h  global.h  main.h  mesh.h  model.h  shader.h  sound.h  tool.h
glLearn/res/3dmodels/hutao/: 00000.mtl
glLearn/res/3dmodels/lnt/: 00001.mtl
glLearn/res/3dmodels/naxida/: FileList.xml  nihida.fbx  test.bat
glLearn/res/icon/: version.rc.in
glLearn/res/shader/: light.frag  model.frag  model.vert  shader.fs  shader.fsh  shader.vs  shader.vsh
glLearn/shader/: blur.frag  cube.frag  cube.vert  depthCubeMap.frag  depthCubeMap.geom  depthCubeMap.vert  depthMap.vert  explode.geom  instant.frag  instant.vert  light.frag  light.vert  model.frag  model.vert  outline.frag  outline.vert  screen.frag  shader.fsh  shader.vsh  skybox.frag  skybox.vert  twoTexs.frag
glLearn/shader/deferredShader/: deferred_shading.frag  gBuffer.frag  gBuffer.vert  simpleBlur.frag  simpleBlur.vert  ssao.frag  ssao.vert
glLearn/shader/objectsShader/: ball.frag  ball.vert  cube.frag  cube.vert  instant.frag  light.frag  light.vert  model.vert
glLearn/shader/postShader/: screen.vert  twoTexs.frag
glLearn/shader/shadowShader/: depthMap.frag  depthMap.vert
glLearn/shader/specialShader/: explode.geom  fonts.frag  fonts.vert  outline.frag  outline.vert
glLearn/src/: camera.cpp  game.cpp  glad.c  global.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  sound.cpp  stb_image.cpp
include/: Static.h
java learn/: Main.java
java learn/tst/: Test.java
javatst/: Main.java
javatst/tst/: Test.java
lib/: guessNumber.h
public/public1/: CMakeLists.txt  public1.c  public1.h
public/public2/: CMakeLists.txt  public2.c  public2.h
python/: min_step.py
qt_creater/: android_release.keystore
qt_creater/test/: Main.qml  (+1 more)
socket/asio/: CMakeLists.txt
socket/asio/app/chat/: chat_client.cpp  chat_server.cpp
socket/asio/app/client/: client.cpp
socket/asio/app/server/: server.cpp
socket/asio/scripts/: build.bat  settings.cmake
socket/asio/third_parts/asio/asio/impl/: io_context.ipp
src/: CMakeLists.txt  Static.c  main.c  student.data  test.c
vscode-android/: ！！！！调试前关闭adb防止jdb冲突先读我.md
(+50 files in other folders)
